# requests-chain

./: README.md  __init__.py  example.py  pyproject.toml
requests_chain/: __init__.py  chained_socks.py  requests_patched.py
requests_chains/: __init__.py  chained_socks.py  requests_patched.py
